--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
     "dev": "npx tailwindcss -i ./src/css/styles.css -o ./dist/css/dev.css --watch",
-    "build": "npx tailwindcss -i ./src/css/styles.css -o ./dist/css/styles.css --minify"
+    "build": "npx tailwindcss -o ./dist/css/styles.css --minify"
   },
   "devDependencies": {
+    "prettier": "2.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
